# backup_system

./: .gitignore  CHECKPOINT.md  CLAUDE.md  README.md  install.py  pyproject.toml  requirements.txt  setup.py
backup/: cli.py  cold.py  config.py  kuma.py  mariadb.py  restic.py  scanner.py  secrets.py
backup_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: config.example.toml  machine.example.toml
systemd/: backup-onfailure@.service  backup-verify-deep.service  backup-verify-deep.timer  backup-verify.service  backup-verify.timer  backup.service  backup.timer  install.sh  notify-failure.py
