[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backup-system"
version = "0.1.0"
description = "Backup system for Linux machines with restic, MariaDB, and cold storage support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "tomli>=2.0;python_version<'3.11'",
]

[project.scripts]
backup = "backup.cli:main"

[tool.setuptools.packages.find]
include = ["backup*"]
